Refactor server setup and remove unused package-lock files
- Updated server package.json to change the start script to use `node server.js`.
- Added new build and start scripts in the main package.json for the server.
- Introduced a new server.js file to handle WebSocket connections and integrate with the CoinMetrics API.
- Removed package-lock.json files from both server and ui directories as they are no longer needed.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "crypto-assignment",
   "version": "1.0.0",
   "scripts": {
-    "server": "tsc && node dist/server.js"
+    "build:server": "pnpm install --filter server && pnpm run --filter server build",
+    "start:server": "pnpm run build:server && pnpm run --filter server start"
   },
   "keywords": [],
   "author": "",
