Update server start script in package.json to simplify execution

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "build:server": "pnpm install --filter server && pnpm run --filter server build",
-    "start:server": "pnpm run build:server && pnpm run --filter server start"
+    "start:server": "pnpm run --filter server start"
   },
   "keywords": [],
   "author": "",
