Remove server.js file and update package.json to add UI build and start scripts

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "build:server": "pnpm install --filter server && pnpm run --filter server build",
-    "start:server": "pnpm run --filter server start"
+    "start:server": "pnpm run --filter server start",
+    "start:ui": "pnpm run --filter ui start",
+    "build:ui": "pnpm install --filter server &&pnpm run --filter ui build"
   },
   "keywords": [],
   "author": "",
