--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "start:ui": "pnpm run --filter ui start",
     "build:ui": "pnpm run --filter ui build",
     "start": "pnpm run start:server & pnpm run start:ui",
-    "dev": "pnpm run --filter ui dev & pnpm run --filter server dev",
-    "build-and-start": "pnpm run build && pnpm run start"
+    "dev": "pnpm run --filter ui dev & pnpm run --filter server dev"
   },
   "keywords": [],
   "author": "",
